--- a/styling.css
+++ b/styling.css
@@ -1,96 +1,128 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+:root {
+    --primary-color: #a855f7;
+    --primary-color-dark: #9333ea;
+    --secondary-color: #ca8a04;
+    --text-dark: #1f2937;
+    --text-light: #6b7280;
+    --extra-light: #faf5ff;
+    --max-width: 1200px;
+}
+
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     font-family: "Roboto", sans-serif;
+    font-weight: 700;
 }
 
+a {
+    text-decoration: none;
+}
 
+nav {
+    width: 100%;
+    z-index: 99;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #ffffff;
+
+}
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    max-width: var(--max-width);
+    padding: 1.5rem 1rem;
+    margin: 0;
+}
+
+ul li a {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--primary-color);
+    transition: .3s;
+}
+
+ul li a:hover {
+    border-top-color: var(--secondary-color);
+    border-bottom-color: var(--secondary-color);
+    color: var(--secondary-color);
 
 }
 
-.toggle_btn {
-    
+nav .checkbox {
+    display: none;
+}
+
+nav input {
+    display: none;
+}
+
+nav .checkbox i {
+    font-size: 2rem;
+    color: var(--primary-color);
     cursor: pointer;
 }
 
-.toggle_menu {
+ul {
     display: flex;
+    transition: .3s;
+    gap: 1rem;
+    list-style: none;
     align-items: center;
 }
 
-.logo {
-    font-size: 2rem;
-    font-weight: 400;
-}
-
-.logo a {
+ul li a {
+    padding: 0.5rem 1rem;
+    border: 2px solid transparent;
+    font-weight: 600;
     text-decoration: none;
-    color: black;
-    font-weight: 400;
-
+    color: var(--text-dark);
+    transition: 0.3s;
 }
 
-.links {
+ul li a:hover {
+    border-top-color: var(--secondary-color);
+    color: var(--secondary-color);
+    border-bottom-color: #ca8a04;
+}
+
+#hero {
+    background-color: var(--extra-light);
+}
+
+.section-container {
+    min-height: 100vh;
+    max-height: var(--max-width);
+    margin: auto;
+    padding: 5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1rem;
-}
-
-.links ul {
-    display: flex;
-        gap: 1rem;
-        padding: 0;
-        margin: 0;
-        list-style: none;
-
-}
-
-.links li a {
-    text-decoration: none;
-    color: #030712;
-    font-weight: 500;
-    font-size: 1.25rem;
-    transition: color 0.3s ease;
-}
-
-.links li a:hover {
-    color: #6b7280;
-    border-bottom: 4px solid #6b7280;
-}
-
-main {
-    background-color: #f3f3f3;
-    height: 70vh;
-}
-
-.first_section {
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    margin-top: 50px;
-
 }
 
-.first_section h1 {
-    font-size: 2.5rem;
-    text-align: center;
-    font-weight: bold;
-    color: #333;
+.content {
+    display: flex;
+    margin-bottom: 1rem;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.content h1 {
+    letter-spacing: 2px;
+    color: var(--text-light);
+    font-weight: 600;
+    margin-bottom: .5rem;
     animation: moveAndChangeColor 5s infinite;
 
 }
@@ -112,7 +144,7 @@ main {
     }
 }
 
-.first_section p {
+.content p {
     text-align: center;
     font-size: 1.5rem;
     font-weight: bold;
@@ -124,177 +156,252 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    gap: 1.25rem;
 }
 
 .my_socials button {
     background: none;
     border: none;
     outline: none;
-    padding: 0;
+    padding: 0.5rem 2.5rem;
     width: 3rem;
     height: 3rem;
 }
 
-.about_section h1 {
-    text-align: center;
+.title {
     font-size: 2.5rem;
-    margin: 20px;
+    line-height: 3rem;
+    font-weight: 400;
+    color: var(--text-dark);
+    margin-bottom: 1rem;
 }
 
-.about {
+.title span {
+    font-weight: 400;
+}
+
+.bio {
+    line-height: 1.5rem;
+    color: var(--text-light);
+    margin-bottom: 2rem;
+}
+
+.action_btns {
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    background-color: plum;
-    align-items: center;
-}
-
-.first-div {
-    font-size: 1rem;
-    text-align: center;
-    margin-left: 50px;
-}
-
-.second-div img {
-    border-radius: 40%;
-    max-width: 100%;
-    margin-right: 40px;
-    height: auto;
-
-}
-
-.my_skillsets h1 {
-    text-align: center;
-    font-size: 2.5rem;
-}
-
-.my_skillsets p {
-    text-align: center;
-    font-size: 1.25rem;
-    margin: 1rem;
-}
-
-.tools {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
     gap: 1rem;
     align-items: center;
-    margin: 10px;
-}
-
-.tools .tool1 {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    padding: 0;
-    margin: 0;
-    list-style: none;
     justify-content: center;
 }
 
-.tools i {
-    display: block;
-    font-size: 2rem;
+.action_btn button {
+    font-size: 1rem;
+    letter-spacing: 2px;
+    font-weight: 600;
+    outline: none;
+    border: 2px solid var(--primary-color);
+    transition: 0.3s;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 1rem 2rem;
 }
 
-.tools img {
-    width: 30px;
-    height: 30px;
+.hire {
+    background-color: #a855f7;
+    color: #ffffff;
+}
+
+.hire:hover {
+    background-color: #9333ea;
+}
+
+
+
+.portfolio {
+    background-color: #a855f7;
+    color: #ffffff;
+
+}
+
+.portfolio:hover {
+    background-color: #9333ea;
+    color: #ffffff;
+
+}
+
+.image-con {
     display: flex;
+    flex-direction: column;
+    place-items: center;
+}
+
+.image-con img {
+    width: min(25rem, 90%);
+    border-radius: 10%;
+    object-fit: contain;
+}
+
+.second-section {
+    background-color: var(--extra-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+}
+
+.skillset {
+    display: flex;
+    gap: 2rem;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
 
-.projects_container{
-    display: flex;
-        flex-direction: column;
-        gap: 100px;
-        justify-content: center;
-        align-items: center;
-        margin: 4rem 0 2.5rem;
-}
-
-section h1{
+.second-section h1 {
+    font-size: 1.5rem;
     text-align: center;
-    font-size: 2.5rem;
 }
 
-.projects{
-    width: 80%;
-        max-width: 600px;
-        background-color: palevioletred;
-        border-radius: 10px;
-        overflow: hidden;
+.skillset img {
+    width: 50px;
+    height: 50px;
 }
 
-.projectcards{
-    height: 10rem;
-    margin: 0 1rem;
+.last-sec {
+    padding: 20px;
+    background-color: var(--extra-light);
 }
 
-.projectcards h3{
-    font-weight: bold;
-    font-size: 1.25rem;
+.third-section {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
 
-.projectcards p{
+.image-wrapper {
+    width: 100%;
+    border-radius: 10px;
+    max-width: var(--max-width);
+}
+
+.title {
+    display: block;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.git-buttons a {
+    padding: 0.5rem 2rem;
+    border-radius: 5px;
+    background-color: var(--primary-color-dark);
+    color: black;
     font-size: 1rem;
 }
 
-.projects img{
-    width: 100%;
-    height: auto;
+.title h3 {
+    color: var(--primary-color-dark);
+    font-size: 2rem;
 }
 
-.projectcards a{
-    list-style: none;
-    text-decoration: none;
-    color: black;
-    padding: 0 0.5rem;
-    background-color: black;
-    border-radius: 1rem;
-    scale: 3s;
-    transition: ease-in-out;
-    color: white;
-
+.title p {
+    font-size: 1rem;
+    text-align: center;
 }
 
-/*media_query*/
+.title button {
+    padding: 1rem 2.5rem;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--primary-color-dark);
+}
 
-@media screen and (max-width: 1024px) {
-    .links {
-        /* display: none; */
+
+
+
+
+
+
+
+
+
+
+
+
+/*media query*/
+@media (width < 750px) {
+    nav .checkbox {
+        display: block;
+    }
+
+    ul {
         position: absolute;
-        top: 60px;
-        right: 0;
-        transform: translateX(-100%);
         width: 100%;
+        height: calc(100vh - 85px);
+        top: 85%;
+        left: -100%;
+        background-color: var(--extra-light);
+        flex-direction: column;
+        gap: 2rem;
+        justify-content: center;
+    }
+
+    nav #check:checked~ul {
+        left: 0;
+    }
+
+    ul li a {
+        font-size: 1.25rem;
+    }
+
+    .content h1 {
+        font-size: 1.5rem;
+    }
+
+    .content p {
+        font-size: 1rem;
+        line-height: 1rem;
+    }
+
+    .section-container {
+        padding: 10rem 1rem 5rem 1rem;
         text-align: center;
+
     }
 
-    .links ul {
-        position: absolute;
+    .image-con {
+        flex-direction: row;
+        display: flex;
+
+    }
+
+    .action_btn {
+        margin: auto;
+    }
+
+    .second-section {
+        display: block;
+        flex-direction: column;
+    }
+
+    .second-section h1 img {
+        font-size: 1rem;
+        margin-right: 1rem;
+    }
+
+    .skillset {
         display: flex;
         flex-direction: column;
-        background-color: #333;
-        width: 70vw;
-        padding: 30px 0px;
     }
 
-    .show {
-        transform: translateX(0%);
-        transition: 0.5s all;
-    }
-
-    .links ul a {
-        color: #ffff;
-    }
-
-    .about_section{
-        display: flex;
+    .third-section {
+        display: block;
         flex-direction: column;
-        justify-content: space-between;
+        object-fit: contain;
+
+
     }
+
+
 }
